k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  namespace: node-api-ns
  labels:
    app: node-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: kahdicheinja/node-js-test-deploy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
