k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
  namespace: node-api-ns
spec:
  type: ClusterIP
  selector:
    app: node-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
